# naanes

./: .gitignore  Cargo.toml
benches/: bench.rs
src/: bus.rs  color.rs  controller.rs  lib.rs  main.rs  mapper.rs  nes.rs  ppu.rs  rom.rs
standalone/: Cargo.toml
standalone/src/: main.rs
