[package]
name = "naanes-standalone"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naanes = { path = ".." }
image = "0.23.13"
# pprof = { version = "0.4", features = ["flamegraph"] }
piston_window = "*"
