[package]
name = "naanes-standalone"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naanes = { path = ".." }
image = "0.23.13"
# pprof = { version = "0.4", features = ["flamegraph"] }
piston_window = "*"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image","gfx","mixer","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "9ab3bafca4de5dec5a5a8b60f1d654cae7ad95aa"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
